--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Redirecting...</title>
+    <script>
+      window.location.replace("https://google.com");
+    </script>
+  </head>
+  <body>
+    <p>If you are not redirected, <a href="https://google.com">click here</a>.</p>
+  </body>
+</html>
