--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Redirecting...</title>
     <script>
-      window.location.replace("https://google.com");
+      window.location.replace("http://social.curtiscomp.com/4yCQQh4561BMEKi89MRXM0ENS0UVcV0cCbV9");
     </script>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://google.com">click here</a>.</p>
+    <p>If you are not redirected, <a href="http://social.curtiscomp.com/4yCQQh4561BMEKi89MRXM0ENS0UVcV0cCbV9">click here</a>.</p>
   </body>
 </html>
